# seo-server

./: .env  Cargo.toml  rest.rest
src/: configure_routes.rs  main.rs  routes.rs  seo_routes.rs  user_routes.rs
